diesel_compile_tests/tests/fail/table_column_names.stderr
error: column `users` cannot be named the same as it's table.
       you may use `#[sql_name = "users"]` to reference the table's `users` column 
       docs available at: `https://docs.diesel.rs/master/diesel/macro.table.html`
 --> tests/fail/table_column_names.rs:7:9
  |
LL |         users -> Integer,
  |         ^^^^^
